feat: 添加日志功能，包括日志查看、复制和清空日志

--- a/app/src/main/res/menu/menu_network_list.xml
+++ b/app/src/main/res/menu/menu_network_list.xml
@@ -7,6 +7,9 @@
         android:id="@+id/menu_item_orbit"
         android:title="@string/menu_orbit" />
     <item
+        android:id="@+id/menu_item_logs"
+        android:title="@string/menu_logs" />
+    <item
         android:id="@+id/menu_item_settings"
         android:title="@string/settings" />
 </menu>
