--- a/app/src/main/res/menu/menu_logs.xml
+++ b/app/src/main/res/menu/menu_logs.xml
@@ -2,13 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/menu_copy_logs"
-        android:icon="@android:drawable/ic_menu_save"
-        android:title="@string/logs_copy"
+        android:id="@+id/menu_item_refresh"
+        android:title="@string/menu_refresh"
+        android:icon="@android:drawable/ic_menu_rotate"
         app:showAsAction="ifRoom" />
     <item
-        android:id="@+id/menu_clear_logs"
+        android:id="@+id/menu_item_clear"
+        android:title="@string/menu_clear"
         android:icon="@android:drawable/ic_menu_delete"
-        android:title="@string/logs_clear"
         app:showAsAction="ifRoom" />
 </menu>
